# pysatl-core

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example_unuran_cffi_advanced.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs_deploy.yml  docs_preview.yml
docs/: Makefile
docs/source/: changelog.rst  conf.py  contributing.rst  generate_api.py  index.rst
docs/source/user_guide/: index.rst  installation.rst
examples/: example-distributions.ipynb  example-parametric.ipynb  example_sampling_methods.ipynb  example_sampling_strategy_custom_distribution.ipynb  overview.ipynb  transformations_overview.ipynb
src/pysatl_core/: __init__.py  types.py
src/pysatl_core/distributions/: __init__.py  characteristics.py  computation.py  distribution.py  fitters.py  registry.py  sampling.py  strategies.py  support.py
src/pysatl_core/distributions/fitters/: __init__.py  base.py  continuous.py  discrete.py  helpers.py  registry.py
src/pysatl_core/distributions/registry/: __init__.py  configuration.py  constraint.py  graph.py  graph_primitives.py
src/pysatl_core/families/: __init__.py  config.py  configuration.py  distribution.py  exponential_family.py  parametric_family.py  parametrizations.py  registry.py  support.py
src/pysatl_core/families/builtins/: __init__.py
src/pysatl_core/sampling/: __init__.py  default.py
src/pysatl_core/sampling/unuran/: __init__.py  method_config.py
src/pysatl_core/stats/_unuran/: api.py  (+1 more)
src/pysatl_core/transformations/: __init__.py  distribution.py  lightweight_distribution.py  operators_mixin.py  transformation_method.py
tests/: conftest.py  test_definitive_graph_and_strategy.py  test_family_and_distribution.py  test_log_likelihood.py  test_parameters.py  test_sampling.py
tests/unit/: test_version.py
tests/unit/distributions/: __init__.py  test_basic.py  test_log_likelihood.py  test_registry.py  test_sampling.py  test_strategy_and_graph.py  test_support.py
tests/unit/families/: test_analytical_plan.py  test_basic.py  test_configuration.py  test_distribution_cache.py  test_exponential_family.py  test_family_and_distribution.py  test_parameters.py  test_parametric_families_registry.py  test_partial_family.py
tests/unit/sampling/: __init__.py
tests/unit/stats/: __init__.py  test_cffi_build.py  test_helpers.py  test_unuran_sampling_strategy.py
tests/unit/transformations/: __init__.py  test_distribution.py  test_lightweight_distribution.py  test_operators_mixin.py  test_transformation_method.py
tests/utils/: __init__.py  mocks.py
(+83 files in other folders)
